--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-heroicons": "^4.0.0",
-    "react-native-svg": "^15.3.0"
+    "react-native-svg": "^15.3.0",
+    "react-native-web": "~0.19.10",
+    "react-dom": "18.2.0",
+    "@expo/metro-runtime": "~3.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
